Refactored core syntax in